--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,10 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\3DRRadio\packages.config" />
+  <repository path="..\ExtLibs\ArdupilotMegaPlanner10\packages.config" />
+  <repository path="..\ExtLibs\AviFile\packages.config" />
+  <repository path="..\ExtLibs\BaseClasses\packages.config" />
   <repository path="..\ExtLibs\BSE.Windows.Forms\packages.config" />
+  <repository path="..\ExtLibs\Comms\packages.config" />
+  <repository path="..\ExtLibs\Controls\packages.config" />
+  <repository path="..\ExtLibs\Core\packages.config" />
+  <repository path="..\ExtLibs\ExtGuided\packages.config" />
+  <repository path="..\ExtLibs\GeoUtility\packages.config" />
+  <repository path="..\ExtLibs\GMap.NET.Core\packages.config" />
+  <repository path="..\ExtLibs\GMap.NET.WindowsForms\packages.config" />
   <repository path="..\ExtLibs\Grid\packages.config" />
+  <repository path="..\ExtLibs\KMLib\packages.config" />
+  <repository path="..\ExtLibs\Mavlink\packages.config" />
+  <repository path="..\ExtLibs\MetaDataExtractorCSharp240d\packages.config" />
   <repository path="..\ExtLibs\MissionPlanner.Gridv2\packages.config" />
+  <repository path="..\ExtLibs\MissionPlanner.Stats\packages.config" />
   <repository path="..\ExtLibs\px4uploader\packages.config" />
+  <repository path="..\ExtLibs\SharpKml\packages.config" />
   <repository path="..\ExtLibs\SimpleGrid\packages.config" />
+  <repository path="..\ExtLibs\tlogThumbnailHandler\packages.config" />
+  <repository path="..\ExtLibs\TrackerHome\packages.config" />
   <repository path="..\ExtLibs\Utilities\packages.config" />
+  <repository path="..\ExtLibs\ZedGraph\packages.config" />
   <repository path="..\packages.config" />
+  <repository path="..\Updater\packages.config" />
+  <repository path="..\wix\packages.config" />
 </repositories>
