--- a/MissionPlanner.csproj
+++ b/MissionPlanner.csproj
@@ -263,6 +263,19 @@
     <Compile Include="Arduino\ArduinoSTKv2.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="InteractiveScript.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InteractiveScript.Designer.cs">
+      <DependentUpon>InteractiveScript.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OpenScriptDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OpenScriptDialog.Designer.cs">
+      <DependentUpon>OpenScriptDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ScriptManager.cs" />
     <Compile Include="CodeGen.cs" />
     <Compile Include="Comms\CommsSerialScan.cs" />
     <Compile Include="Comms\MAVLinkSerialPort.cs" />
@@ -933,6 +946,9 @@
     <EmbeddedResource Include="georefimage.zh-TW.resx">
       <DependentUpon>georefimage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="InteractiveScript.resx">
+      <DependentUpon>InteractiveScript.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Joystick\JoystickSetup.zh-Hant.resx">
       <DependentUpon>JoystickSetup.cs</DependentUpon>
     </EmbeddedResource>
@@ -974,6 +990,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OpenGLtest2.resx">
       <DependentUpon>OpenGLtest2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OpenScriptDialog.resx">
+      <DependentUpon>OpenScriptDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.zh-Hans.resx" />
     <EmbeddedResource Include="Radio\3DRradio.it-IT.resx">
@@ -2891,12 +2910,12 @@
     <Content Include="LogAnalyzer\UnitTest.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\example5 inject data.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="ScriptIcons\default.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\TAKEOFF.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="Scripts\null.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Drivers\ArduinoMEGA2560.inf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -6480,27 +6499,6 @@
     <None Include="Resources\pixhawk.jpg" />
     <Content Include="Resources\rover.png" />
     <Content Include="Resources\splash.jpg" />
-    <Content Include="Scripts\datetime.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\example2.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\example4 wp.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\example3.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\PARACHUTE LANDING APPROACH.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\rc.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\example1.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="Utilities\DroneApi\webapi.proto">
       <Generator>ProtoBufTool</Generator>
     </None>
