--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ env:
    global: 
      - EnableNuGetPackageRestore=true 
 
+os:
+  - osx
+
 #install:
 #  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
 #  - echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
