--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
  matrix:
   - MONO_VERSION="3.8.0"
 
+sudo: true
+
 before_install:
  - wget "http://download.mono-project.com/archive/${MONO_VERSION}/macos-10-x86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
  - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
